use percentages and absolute positioning rather than align-items center for IE 11 compatibility

--- a/assets/css/3-modules/portfolio.sass
+++ b/assets/css/3-modules/portfolio.sass
@@ -79,6 +79,7 @@ div.waiting-for-portfolio-content
 div.portfolio-item-extended-content-container
   position: absolute
   width: 80%
+  left: calc(50% - 380px)
   background-color: white
   top: 100%
   border-radius: 4px
@@ -165,7 +166,7 @@ div.portfolio-item-overlay
   background-color: rgba(60, 60, 60, 0.7)
   // height: 100%
   justify-content: center
-  align-items: center
+  // align-items: center
   transition: 0.3s ease-in-out
   position: relative
   flex-grow: 1
@@ -260,6 +261,7 @@ div.portfolio-item-article
 // Acknowledgements: http://tobiasahlin.com/spinkit/
 .spinner
   width: 70px
+  left: calc(50% - 35px)
   text-align: center
   position: absolute
   margin-top: 40px
